--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ ul li {
 	</div>
 	<hr>
 	<div id="content">
-    	<img class="picture" src="images/bg.jpg"/>
+    	<img class="picture" src="bg.jpg"/>
         <div class="contenttext">
         	<h2>About Company</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean dignissim ex sed sem commodo porttitor. Duis quis dictum metus, sed elementum ipsum. Fusce molestie feugiat libero at molestie. Suspendisse nec commodo dui, eget blandit lacus. Nulla finibus purus eget gravida mollis. Nullam ultricies nunc neque, non sagittis ex condimentum ornare. Fusce ac sollicitudin nisl.
