--- a/index.html
+++ b/index.html
@@ -60,16 +60,17 @@ ul li {
     	<img class="picture" src="bg.jpg"/>
         <div class="contenttext">
         	<h2>About Company</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean dignissim ex sed sem commodo porttitor. Duis quis dictum metus, sed elementum ipsum. Fusce molestie feugiat libero at molestie. Suspendisse nec commodo dui, eget blandit lacus. Nulla finibus purus eget gravida mollis. Nullam ultricies nunc neque, non sagittis ex condimentum ornare. Fusce ac sollicitudin nisl.
+            <p><h3>DIGITAL MARKETER – A DIGITAL MARKETING COMPANY IN INDIA</h3>Business Growth, check! Stunning website, check! Customer Engagement and conversion? Double check.! Well, there you go, a Digital Marketing Company In India that checks all the boxes and is a solid bet and reliable solution to work with.!! Digital Marketer, an initiative by a bunch of crazy and talented engineering lads is a fruit of year-long practice and expertise in the field of online marketing.
 
-Aliquam gravida, nisi ut hendrerit blandit, tortor eros placerat dolor, ac lacinia tellus tellus vitae mauris. Donec ultrices tellus eget turpis viverra molestie. Donec laoreet laoreet dignissim. Proin malesuada congue aliquet. Vivamus quis lectus feugiat, pellentesque urna et, ullamcorper elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Duis sed velit turpis. Phasellus feugiat quam neque, sed sollicitudin diam ullamcorper nec. Nulla euismod justo id tincidunt tincidunt..</p>
+It is an excellent digital marketing company in India providing data- driven, client specific, customer oriented digital marketing services to grow your business digitally. Most importantly, being a pioneer of digital marketing training for 8 years, we have helped numerous business owners and young professionals fulfilling their online business missions.
+</p>
 		<br>
 		<br>
 		<h2 style="color: #123F83; font-size: 24px; margin-bottom: 10px;">About CEO</h2>
 		<div class="card">
   <div class="box">
     <h4 style="font-size: 42px;text-align: center;font-family: sans-serif;"><b>Ayush Jain</b></h4> 
-    <p style="margin: 25px;text-align: center;font-size: 14px;font-family: montserrat;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean dignissim ex sed sem commodo porttitor. Duis quis dictum metus, sed elementum ipsum. Fusce molestie feugiat libero at molestie. Suspendisse nec commodo dui, eget blandit lacus. Nulla finibus purus eget gravida mollis. Nullam ultricies nunc neque, non sagittis ex condimentum ornare. Fusce ac sollicitudin nisl.</p> 
+    <p style="margin: 25px;text-align: center;font-size: 14px;font-family: montserrat;">We provide real-world solutions to the clients seeking for online services. Further, People connect with us when their businesses either aren’t making them happy by not generating enough sales or by not bringing them sufficient clients, we help them, come out of that vicious cycle. So, our work involves working with complex software and intense strategies to bring business on top of a google search and we do not stop until our client is happy and well satisfied.</p> 
   </div>
 </div>
 </div>
@@ -91,16 +92,16 @@ Aliquam gravida, nisi ut hendrerit blandit, tortor eros placerat dolor, ac lacin
 <h2 style="color: #123F83; font-size: 24px; margin-bottom: 10px;">Services</h2>
 			<dl>
   <dt>Development</dt>
-  <dd>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</dd>
+  <dd>We focuses on continuous Development.</dd>
   <dt>Marketing</dt>
-  <dd>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</dd>
+  <dd>We acquire total of 12% marketing of whole India</dd>
 </dl>
 			
         </div>
     	<img class="picture" src="images/image3.jpg"/>
         <div class="contenttext">
-        <h2>Template Information</h2>
-            <p>You may use this template in any way you would like, please just leave the link at the bottom to our site in place. In order to add your own pictures, simply insert an image as usual, and just add class=&quot;picture&quot; to each image. The shadow is automatically added to the images. Make sure your image is exactly 750px wide for best results.</p>
+        <h2>Training:</h2>
+            <p>Above all, we give a complete and extensive 3-month internship in the Digital Marketing course with 70% practical and 30% theoretical training. Our experts cover 16 modules with intense study material. Further, we teach with live projects with 24x7 online support. </p>
         </div>
     </div>
 </div>
