--- a/about.html
+++ b/about.html
@@ -25,9 +25,7 @@
     	<img class="picture" src="images/bg.jpg"/>
         <div class="contenttext">
         	<h2>About Company</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean dignissim ex sed sem commodo porttitor. Duis quis dictum metus, sed elementum ipsum. Fusce molestie feugiat libero at molestie. Suspendisse nec commodo dui, eget blandit lacus. Nulla finibus purus eget gravida mollis. Nullam ultricies nunc neque, non sagittis ex condimentum ornare. Fusce ac sollicitudin nisl.
-
-Aliquam gravida, nisi ut hendrerit blandit, tortor eros placerat dolor, ac lacinia tellus tellus vitae mauris. Donec ultrices tellus eget turpis viverra molestie. Donec laoreet laoreet dignissim. Proin malesuada congue aliquet. Vivamus quis lectus feugiat, pellentesque urna et, ullamcorper elit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Duis sed velit turpis. Phasellus feugiat quam neque, sed sollicitudin diam ullamcorper nec. Nulla euismod justo id tincidunt tincidunt..</p>
+            <p>Business Growth, check! Stunning website, check! Customer Engagement and conversion? Double check.! Well, there you go, a Digital Marketing Company In India that checks all the boxes and is a solid bet and reliable solution to work with.!! Digital Marketer, an initiative by a bunch of crazy and talented engineering lads is a fruit of year-long practice and expertise in the field of online marketing. It is an excellent digital marketing company in Jaipur providing data- driven, client specific, customer oriented digital marketing services to grow your business digitally. Most importantly, being a pioneer of digital marketing training for 8 years, we have helped numerous business owners and young professionals fulfilling their online business missions.</p>
 
 </div>
 	
@@ -38,55 +36,46 @@ Aliquam gravida, nisi ut hendrerit blandit, tortor eros placerat dolor, ac lacin
     <th>Country</th>
   </tr>
   <tr>
-    <td>Alfreds Futterkiste</td>
-    <td>Maria Anders</td>
-    <td>Germany</td>
+    <td>Ayush</td>
+    <td>1111111111</td>
+    <td>India</td>
   </tr>
   <tr>
-    <td>Berglunds snabbköp</td>
-    <td>Christina Berglund</td>
-    <td>Sweden</td>
+    <td>Aditya</td>
+    <td>2222222222</td>
+    <td>India</td>
   </tr>
   <tr>
-    <td>Centro comercial Moctezuma</td>
-    <td>Francisco Chang</td>
-    <td>Mexico</td>
+    <td>Ram</td>
+    <td>3333333333</td>
+    <td>India</td>
   </tr>
   <tr>
-    <td>Ernst Handel</td>
-    <td>Roland Mendel</td>
-    <td>Austria</td>
+    <td>Shyam</td>
+    <td>4444444444</td>
+    <td>India</td>
   </tr>
   <tr>
-    <td>Island Trading</td>
-    <td>Helen Bennett</td>
-    <td>UK</td>
+    <td>Ashish</td>
+    <td>5555555555</td>
+    <td>India</td>
   </tr>
   <tr>
-    <td>Königlich Essen</td>
-    <td>Philip Cramer</td>
-    <td>Germany</td>
+    <td>Adi</td>
+    <td>6666666666</td>
+    <td>India</td>
   </tr>
   <tr>
-    <td>Laughing Bacchus Winecellars</td>
-    <td>Yoshi Tannamuri</td>
-    <td>Canada</td>
+    <td>Suresh</td>
+    <td>7777777777</td>
+    <td>India</td>
   </tr>
   <tr>
-    <td>Magazzini Alimentari Riuniti</td>
-    <td>Giovanni Rovelli</td>
-    <td>Italy</td>
+    <td>Mahesh</td>
+    <td>8888888888</td>
+    <td>India</td>
   </tr>
-  <tr>
-    <td>North/South</td>
-    <td>Simon Crowther</td>
-    <td>UK</td>
-  </tr>
-  <tr>
-    <td>Paris spécialités</td>
-    <td>Marie Bertrand</td>
-    <td>France</td>
-  </tr>
+
 </table>
 		
 </div>
