--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
 	</div>
 	<hr>
 	<div id="content">
-    	<img class="picture" src="bg.jpg"/>
+    	<img class="picture" src="bg2.jpg"/>
         <div class="contenttext">
         	<h2>About Company</h2>
             <p>Business Growth, check! Stunning website, check! Customer Engagement and conversion? Double check.! Well, there you go, a Digital Marketing Company In India that checks all the boxes and is a solid bet and reliable solution to work with.!! Digital Marketer, an initiative by a bunch of crazy and talented engineering lads is a fruit of year-long practice and expertise in the field of online marketing. It is an excellent digital marketing company in Jaipur providing data- driven, client specific, customer oriented digital marketing services to grow your business digitally. Most importantly, being a pioneer of digital marketing training for 8 years, we have helped numerous business owners and young professionals fulfilling their online business missions.</p>
