--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ It is an excellent digital marketing company in India providing data- driven, cl
 				<br>
 		<br>
 		
-    	<img class="picture" src="image2.jpg"/>
+    	<img class="picture" src="image2.png"/>
         <div class="contenttext">
         <h2>Projects Information</h2>
             <article>
@@ -98,7 +98,7 @@ It is an excellent digital marketing company in India providing data- driven, cl
 </dl>
 			
         </div>
-    	<img class="picture" src="image3.jpg"/>
+    	<img class="picture" src="image3.jpeg"/>
         <div class="contenttext">
         <h2>Training:</h2>
             <p>Above all, we give a complete and extensive 3-month internship in the Digital Marketing course with 70% practical and 30% theoretical training. Our experts cover 16 modules with intense study material. Further, we teach with live projects with 24x7 online support. </p>
