--- a/index.html
+++ b/index.html
@@ -1,2 +1,7 @@
-
+<HTML>
+  <title></title>
+  <head></head>
+  <body>
 <a href="ayush-cu.github.io/blob/master/module-2-solution/index.html">Module 2</a>
+  </body>
+  </html>
