--- a/index.html
+++ b/index.html
@@ -3,5 +3,8 @@
   <head></head>
   <body>
 <a href="ayush-cu.github.io/module-2-solution/index.html">Module 2</a>
+<a href="ayush-cu.github.io/module-3-solution/index.html">Module 3</a>
+<a href="ayush-cu.github.io/module-4-solution/index.html">Module 4</a>
+<a href="ayush-cu.github.io/module-5-solution/index.html">Module 5</a>
   </body>
   </html>
