--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head></head>
 <body>
 <h1>WEB_EXPERIMENTS</h1>
-<a href="https://ayush-cu.github.io/Website/Exp-1/index.html">Module 2</a>
+<a href="https://ayush-cu.github.io/Website/Exp-1/index.html">Experiment 1</a>
 <br>  
 <hr>
 <h1>...COURSERA ASSIGNMENTS...</h1>
