--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <body>
 <h1>WEB_EXPERIMENTS</h1>
 <a href="https://ayush-cu.github.io/Website/Exp-1/index.html">Experiment 1</a>
+<a href="https://ayush-cu.github.io/XML%20%26%20XSD/DIGITAL.xml">Experiment 3</a>
 <br>  
 <hr>
 <h1>...COURSERA ASSIGNMENTS...</h1>
