--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 <head></head>
 <body>
 <h1>WEB_EXPERIMENTS</h1>
-<a href="https://ayush-cu.github.io/Website/Exp-1/index.html">Experiment 1</a>
-<a href="https://ayush-cu.github.io/XML%20%26%20XSD/DIGITAL.xml">Experiment 3</a>
-<a href="https://ayush-cu.github.io/FormValidation/Form.html">Experiment 4</a>
+<a href="https://ayush-cu.github.io/Website/Exp-1/index.html">Experiment 1</a><br>
+<a href="https://ayush-cu.github.io/Website/Exp-2/index.html">Experiment 2</a><br>
+<a href="https://ayush-cu.github.io/XML%20%26%20XSD/DIGITAL.xml">Experiment 3</a><br>
+<a href="https://ayush-cu.github.io/FormValidation/Form.html">Experiment 4</a><br>
 <br>  
 <hr>
 <h1>...COURSERA ASSIGNMENTS...</h1>
-<a href="ayush-cu.github.io/module-2-solution/index.html">Module 2</a>
-<a href="ayush-cu.github.io/module-3-solution/index.html">Module 3</a>
-<a href="ayush-cu.github.io/module-4-solution/index.html">Module 4</a>
-<a href="ayush-cu.github.io/module-5-solution/index.html">Module 5</a>
+<a href="ayush-cu.github.io/module-2-solution/index.html">Module 2</a><br>
+<a href="ayush-cu.github.io/module-3-solution/index.html">Module 3</a><br>
+<a href="ayush-cu.github.io/module-4-solution/index.html">Module 4</a><br>
+<a href="ayush-cu.github.io/module-5-solution/index.html">Module 5</a><br>
 </body>
 </html>
