--- a/Website/EXP-5(Cookie)/Exp-1/index.html
+++ b/Website/EXP-5(Cookie)/Exp-1/index.html
@@ -52,7 +52,7 @@ ul li {
             <a href="#">Services</a>
             <a href="#">Portfolio</a>
             <a href="#">Contact</a>
-            <a href="form.html">Sign Up</a>
+            <a href="Form.html">Sign Up</a>
         </div>
     </div>
 	</div>
