--- a/Website/EXP-6(DOM)/index.html
+++ b/Website/EXP-6(DOM)/index.html
@@ -52,7 +52,7 @@ ul li {
             <a href="#">Services</a>
             <a href="#">Portfolio</a>
             <a href="D1.html">Contact</a>
-            <a href="form.html">Sign Up</a>
+            <a href="Form.html">Sign Up</a>
         </div>
     </div>
 	</div>
