--- a/Website/EXP-5(Cookie)/Exp-1/Form.html
+++ b/Website/EXP-5(Cookie)/Exp-1/Form.html
@@ -69,7 +69,7 @@
    
    <body>
        <h1 align="center" style="font-family: Comic Sans MS, cursive, sans-serif;" >PLEASE FILL THE REQUIRED INFORMATION</h1>
-      <form action = "/welcome.html" name = "myForm" onsubmit = "return(validate());">
+      <form action = "welcome.html" name = "myForm" onsubmit = "return(validate());">
          <table align="center" border-collapse: collapse , cellspacing = "5" cellpadding = "20" border = "10" style="background-color:#44beae" >
     
             <tr>
@@ -107,7 +107,7 @@
                      <option value = "-1" selected>[choose your state]</option>
                      <option value = "1">Arunanchal Pradesh</option>
                      <option value = "2">Bihar</option>
-                     <option value = "3">Chhattisgarh</option>
+                     <option value = "3">Chattisgarh</option>
                      <option value = "4">Goa</option>
                      <option value = "5">Gujarat</option>
                      <option value = "6">Haryana</option>
