--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 <a href="https://ayush-cu.github.io/Website/Exp-2/index.html">Experiment 2</a><br>
 <a href="https://ayush-cu.github.io/XML%20%26%20XSD/DIGITAL.xml">Experiment 3</a><br>
 <a href="https://ayush-cu.github.io/FormValidation/Form.html">Experiment 4</a><br>
+<a href="https://ayush-cu.github.io/Website/EXP-5(Cookie)/Exp-1/index.html">Experiment 5</a><br>
+<a href="https://ayush-cu.github.io/Website/EXP-6(DOM)/index.html">Experiment 6</a><br> 
 <br>  
 <hr>
 <h1>...COURSERA ASSIGNMENTS...</h1>
