--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <a href="https://ayush-cu.github.io/FormValidation/Form.html">Experiment 4</a><br>
 <a href="https://ayush-cu.github.io/Website/EXP-5(Cookie)/Exp-1/index.html">Experiment 5</a><br>
 <a href="https://ayush-cu.github.io/Website/EXP-6(DOM)/index.html">Experiment 6</a><br> 
+<a href="https://ayush-cu.github.io/Website/EXP7-JSON%20with%20AJAX/IndexProducts.html">Experiment 7</a><br>
 <br>  
 <hr>
 <h1>...COURSERA ASSIGNMENTS...</h1>
