Changes in Index Page
LMS_version-2

--- a/E-Learners Education/index.html
+++ b/E-Learners Education/index.html
@@ -223,7 +223,6 @@
                         data-paddingright="[40,40,30,25]"
                         data-paddingbottom="[12,12,8,8]"
                         data-paddingleft="[40,40,30,25]"
-
                         style="z-index: 14; white-space: nowrap;  font-weight:500; color:#ffffff; font-family:Rubik; text-transform:uppercase; background-color:#092ace; letter-spacing:1px; border-radius: 3px;">View Courses
                     </div>
                 </li>
@@ -448,10 +447,10 @@
                             <a href="#"><img src="images/features/features_1.jpg" alt="" class="img-fluid"></a>
                         </div>
                         <div class="blog_title">
-                            <span>look At</span>  
-                            <h3><a href="#" title="">Next Scheduled</a></h3> 
-                            <p>Lorem Ipsum dolor sit amet mollis felis arcu donec viverra. Pede phasellus etiam; Aaecenas vel vici quis dictum rutrum nec nisi et ac penatibus aenean....</p>                    
-                        </div>   
+                            <span>Tell us</span>  
+                            <h3><a href="#" title="">Your Requirements</a></h3> 
+                            <p>E-Learners can write to us regarding the events and courses which are required to them. We will try to provide you our best. </p>
+                        <br></div>   
                     </div>
 
                     <div class="single_item single_item_center">
@@ -461,7 +460,7 @@
                         <div class="blog_title">
                             <span>Go To</span>  
                             <h3><a href="#" title="">Online Courees</a></h3> 
-                            <p>Lorem Ipsum dolor sit amet mollis felis arcu donec viverra. Pede phasellus etiam; Aaecenas vel vici quis dictum rutrum nec nisi et ac penatibus aenean. Pede enim nunc ultricies quis rhoncus penatibus tincidunt integer felis...</p>                    
+                            <p>Access our Industry level courses at no time.</p>
                         </div>   
                     </div>
 
@@ -470,9 +469,9 @@
                             <a href="#" title=""><img src="images/features/features_3.jpg" alt="" class="img-fluid"></a>
                         </div>
                         <div class="blog_title">
-                            <span>Get Your</span>  
-                            <h3><a href="#" title="">Education Equip</a></h3> 
-                             <p>Lorem Ipsum dolor sit amet mollis felis arcu donec viverra. Pede phasellus etiam; Aaecenas vel vici quis dictum rutrum nec nisi et ac penatibus aenean....</p>  
+                            <span>Have Your</span>  
+                            <h3><a href="#" title="">Equipment Ready</a></h3> 
+                            <p>E-Learners provides many courses which require constant working on the cloud infrastructure which can be accessed thorugh E-Learners platform. </p>
                         </div>   
                     </div>
 
@@ -489,7 +488,7 @@
             <div class="col-12 col-sm-12 col-md-12 col-lg-12">
                 <div class="sub_title">
                     <h2>Our Popular Courses</h2>
-                    <p>Lorem ipsum dolor sit amet mollis felis dapibus arcu donec viverra. Pede phasellus eget. Etiam maecenas vel vici quis dictum rutrum nec nisi et.</p>  
+                    <p>E-Learners provides thousand of courses at an instance which are planned and created according to professional environment.<p>
                 </div><!-- ends: .section-header -->
             </div>
 
@@ -639,13 +638,13 @@
                     </div>
                 </div><!-- Ends: .single courses -->
             </div><!-- Ends: . -->  
-            <div class="pagination_blog">
+           <!-- <div class="pagination_blog">
                 <ul>
                     <li><a href="#">1</a></li>
                     <li class="current"><a href="#">2</a></li>
                     <li><a href="#" class=""><i class='flaticon-right-arrow'></i></a></li>
                 </ul>
-            </div>                                                    
+            </div>-->                                                    
         </div>
 
     </div>
@@ -658,8 +657,8 @@
             <div class="col-12 col-sm-12 col-md-12 col-lg-5">
                 <div class="title">
                     <h2>Take The First Step To Learn With Us.</h2>
-                    <p>At vero eos et accusamus et iusto odio dignissio ducimus qui blanditiis praesentium volu ptat umtjk deleniti atque corrupti quos esentium voluptatum delen itamus et iusto odio dignissimos ducimus qui blanditii. </p>
-                 </div>
+                    <p>Learn the latest skills like business analytics, graphic design, Python, Literature, Photography, Music and more. Gain relevant, job-ready skills from top universities & companies. Start learning today. 24/7 Customer Support.</p>
+                </div>
             </div>
         </div>
     </div>
@@ -683,8 +682,8 @@
                 </div>
                 <div class="col-12 col-sm-6 col-md-5 col-lg-5">
                     <div class="about_story_title">
-                        <h2>The Srory Of Our Eduwais.</h2>
-                        <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum del Education atque corrupti.</p>
+                        <h2>The Srory Of Our <br>E-Learners.</h2>
+                        <p>E-Learners provide Industry related courses as well as Personal skill development related courses at very low to no prices at all.</p>
                      </div>
                 </div>
             </div>
@@ -701,10 +700,10 @@
                 <div class="event_title_wrapper">  
                     <div class="sub_title">
                         <h2>Our Upcoming Events</h2>
-                        <p>Lorem ipsum dolor sit amet mollis felis dapibus arcu donec viverra. Pede phasellus eget. Etiam maecenas vel vici quis dictum rutrum nec nisi et.</p>  
+                        <p>E-Learners , please updated with the upcoming events and grow your profesional and career opportunities.</p>
                     </div><!-- ends: .section-header -->
                     <div class="envent_all_view">
-                        <a href="#" title="">View All</a>
+                        <a href="event.html" title="">View All</a>
                     </div>
                 </div> 
             </div>
@@ -717,15 +716,15 @@
                         <a href="#"><img src="images/events/event_1.jpg" alt="" class="img-fluid"></a>
                     </div>
                     <div class="event_info">
-                        <h3><a href="#" title="">OneNote for Windows 10 Essential<br> Training</a></h3>
+                        <h3><a href="#" title="">Training On How to use OneNote for Windows 10 Essential</a></h3>
                         <div class="events_time">
-                            <span class="time"><i class="flaticon-clock-circular-outline"></i>8.00 Am - 5.00 Pm</span>
-                            <span><i class="fas fa-map-marker-alt"></i>Hall - A | Broklyn Audiitorium</span>
+                            <span class="time"><i class="far fa-clock"></i>8.00 Am - 5.00 Pm</span>
+                            <span><i class="fas fa-map-marker-alt"></i>Christ University - Central Auditorium</span>
                         </div>
-                        <p>Lorem ipsum dolor sit amet mollis dapibus arcur donec viverra to phasellus<br> eget. Etiam maecenas vel vici quis dictum rutrum nec nisi et. Ac pena<br> tibus aenean laoreet.</p>
+                        <p> Learn OneNote Online At Your Own Pace. Start Today and Become an Expert in Days. Join Millions of Learners From Around The World Already Learning On E-Learners.</p>
                         <div class="event_dete">
                             <span class="date">09</span>
-                            <span>Jan</span>
+                            <span>April</span>
                         </div>
                     </div>
                 </div>  
@@ -734,19 +733,19 @@
             <div class="col-sm-12 events_full_box">
                 <div class="events_single events_single_left">
                     <div class="event_info">
-                        <h3><a href="#" title="">Magazine Design Start to Finish:<br> The Inside Pages</a></h3>
+                        <h3><a href="#" title="">Python Designs - Start to Finish<br>Live From The Campus</a></h3>
                         <div class="events_time">
-                            <span class="time"><i class="flaticon-clock-circular-outline"></i>8.00 Am - 5.00 Pm</span>
-                            <span><i class="fas fa-map-marker-alt"></i>Hall - A | Broklyn Audiitorium</span>
+                            <span class="time"><i class="far fa-clock"></i>8.00 Am - 5.00 Pm</span>
+                            <span><i class="fas fa-map-marker-alt"></i>Kangeri Campus</span>
                         </div>
-                         <p>Lorem ipsum dolor sit amet mollis dapibus arcur donec viverra to phasellus<br> eget. Etiam maecenas vel vici quis dictum rutrum nec nisi et. Ac pena<br> tibus aenean laoreet.</p>
+                        <p>Learn Python programming language in weeks with this Python for beginners online course. Join millions of learners from around the world already learning Python.</p>
                     </div>
                     <div class="event_banner">
                         <a href="#"><img src="images/events/event_2.jpg" alt="" class="img-fluid"></a>
                     </div>
                     <div class="event_dete">
                         <span class="date">15</span>
-                        <span>Jan</span>
+                        <span>April</span>
                     </div>
                 </div>  
             </div>
@@ -757,19 +756,19 @@
                         <a href="#"><img src="images/events/event_3.jpg" alt="" class="img-fluid"></a>
                     </div>
                     <div class="event_info">
-                        <h3><a href="#" title="">Robotic Process Automation Tech<br> Primer</a></h3>
+                        <h3><a href="#" title="">Robotic Process Automation Tech</a></h3>
                         <div class="events_time">
-                            <span class="time"><i class="flaticon-clock-circular-outline"></i>8.00 Am - 5.00 Pm</span>
-                            <span><i class="fas fa-map-marker-alt"></i>Hall - A | Broklyn Audiitorium</span>
+                            <span class="time"><i class="far fa-clock"></i>8.00 Am - 5.00 Pm</span>
+                            <span><i class="fas fa-map-marker-alt"></i>Hall - A | Christ University</span>
                         </div>
-                         <p>Lorem ipsum dolor sit amet mollis dapibus arcur donec viverra to phasellus<br> eget. Etiam maecenas vel vici quis dictum rutrum nec nisi et. Ac pena<br> tibus aenean laoreet.</p>
+                        <p> Hyper-Automation Platform To Self-Heal, Self-Secure, & Self-Service From Cloud To Edge! Reduce Unplanned Outages. Resolve Endpoints Issues Before They Happen. </p>
                         <div class="event_dete">
                             <span class="date">20</span>
-                            <span>Jan</span>
+                            <span>April</span>
                         </div>
                     </div>
                 </div>  
-            </div>            
+            </div>             
 
         </div>
     </div>
@@ -790,17 +789,17 @@
                     <div class="carousel_text slider-for">
                         <div>
                             <div class="single_box wow fadeInUp" data-wow-duration="2s" data-wow-delay=".2s">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque um sociis natoque pena pretium quis, sem.</p>
+                                <p>E-Learners is one of the best online learning platform i have ever used.</p>
                             </div>
                         </div>
                         <div>
                             <div class="single_box wow fadeInUp" data-wow-duration="2s" data-wow-delay=".3s">
-                                <p>Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus.</p>
+                                <p>E-learners helped me to get a job in very reputed MNC.</p>
                             </div>
                         </div>
                         <div>
                             <div class="single_box wow fadeInUp" data-wow-duration="2s" data-wow-delay=".4s">
-                                <p>Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum.</p>
+                                <p>I've develpoed many professional skills which helped me to find a job and grow my career.</p>
                             </div>
                         </div>
                     </div> 
@@ -809,22 +808,22 @@
                             <div class="restimonial_single_img">
                                 <img src="images/team/review_1.jpg" alt="2" class="img-fluid">
                                 <div class="name_position">
-                                    <span class="name">Michael Jusi</span>
+                                    <span class="name">Aditya</span>
                                     <span>Graphic Student</span>
                                 </div>
                             </div>                    
                             <div class="restimonial_single_img">
                                 <img src="images/team/review_4.jpg" alt="2" class="img-fluid ">
                                 <div class="name_position">
-                                    <span class="name">Jhon Smith</span>
+                                    <span class="name">Aditi</span>
                                     <span>Web Student</span>
                                 </div>
                             </div>                    
                             <div class="restimonial_single_img ">
                                 <img src="images/team/review_3.jpg" alt="2" class="img-fluid">
                                 <div class="name_position">
-                                    <span class="name">James Colins</span>
-                                    <span>Graphic Student</span>
+                                    <span class="name">Amit</span>
+                                    <span>Software Developer</span>
                                 </div>
                             </div>                    
                         </div>
@@ -844,7 +843,7 @@
             <div class="col-12 col-sm-12 col-md-12 col-lg-12">
                 <div class="sub_title">
                     <h2>Our Latest Blog</h2>
-                    <p>Lorem ipsum dolor sit amet mollis felis dapibus arcu donec viverra. Pede phasellus eget. Etiam maecenas vel vici quis dictum rutrum nec nisi et.</p>  
+                    <p>This blog is all about to make our E-Learners updated at every point of time.</p>
                 </div><!-- ends: .section-header -->
             </div>
             <div class="col-12 col-sm-6 col-md-4 col-lg-4">
@@ -853,10 +852,10 @@
                         <a href="#" title=""><img src="images/blog/blog_1.jpg" alt="" class="img-fluid"></a>
                     </div>
                     <div class="blog_title">
-                        <span>LeaderShip Development</span>  
-                        <h3><a href="#" title="">How to Become Master In <br>CSS within qa Week.</a></h3> 
+                        <span>Python Development in current Industries</span>  
+                        <h3><a href="#" title="">How to Become Master In <br>Python designing.</a></h3> 
                         <div class="post_bloger">
-                            <span>15/02/2018 - By </span> <span class="bloger_name"> James Colins</span>
+                            <span>20/02/2021 - By </span> <span class="bloger_name"> Ayush Jain</span>
                         </div>               
                     </div>   
                 </div>
@@ -870,7 +869,7 @@
                         <span>LeaderShip Development</span>  
                         <h3><a href="#" title="">Students work together to <br>solve a problem.</a></h3> 
                         <div class="post_bloger">
-                            <span>15/02/2018 - By </span> <span class="bloger_name"> Jhon Deo</span>
+                            <span>25/03/2021 - By </span> <span class="bloger_name"> Ganga H. Pillai</span>
                         </div>               
                     </div>   
                 </div>
@@ -881,10 +880,10 @@
                         <a href="#" title=""><img src="images/blog/blog_3.jpg" alt="" class="img-fluid"></a>
                     </div>
                     <div class="blog_title">
-                        <span>LeaderShip Development</span>  
-                        <h3><a href="#" title="">How to Become Master In <br>CSS within qa Week.</a></h3> 
+                        <span>Music : As a career</span>  
+                        <h3><a href="#" title="">How to Become Master In <br>Music within a month.</a></h3> 
                         <div class="post_bloger">
-                            <span>15/02/2018 - By </span> <span class="bloger_name"> Simon Stain</span>
+                            <span>5/04/2021 - By </span> <span class="bloger_name"> Sakshi Narang</span>
                         </div>               
                     </div>   
                 </div>
@@ -893,7 +892,7 @@
     </div>
 </section><!-- End Blog  -->
 
-
+<!--
 <section class="our_sponsor">
     <div class="container">
         <div class="row">
@@ -901,7 +900,9 @@
                 <div class="sub_title">
                     <h2>Trusted To Tell Their Story</h2>
                     <p>Lorem ipsum dolor sit amet mollis felis dapibus arcu donec viverra. Pede phasellus eget. Etiam maecenas vel vici quis dictum rutrum nec nisi et.</p>  
-                </div><!-- ends: .section-header -->
+                </div>   --> 
+                <!-- ends: .section-header -->
+    <!--        
             </div>
             <div class="col-12 col-sm-12 col-md-12 col-lg-12">
                 <ul class="sponsored_company_logos">
@@ -919,8 +920,9 @@
                 </ul>
             </div>            
         </div>
-    </div>
-</section><!-- ./ End Our Sponsor -->
+    </div>  
+</section>-->
+<!-- ./ End Our Sponsor -->
 
 
 <!-- Footer -->  
