--- a/E-Learners Education/index.html
+++ b/E-Learners Education/index.html
@@ -79,7 +79,7 @@
     <div class="edu_nav">
         <div class="container">
             <nav class="navbar navbar-expand-md navbar-light bg-faded">
-                <a class="navbar-brand" href="index-2.html"><img src="images/logo.png" alt="logo"></a>
+                <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="logo"></a>
                 <div class="collapse navbar-collapse main-menu" id="navbarSupportedContent">
                     <ul class="navbar-nav nav lavalamp ml-auto menu">
                         <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
@@ -808,7 +808,7 @@
                             <div class="restimonial_single_img">
                                 <img src="images/team/review_1.jpg" alt="2" class="img-fluid">
                                 <div class="name_position">
-                                    <span class="name">Aditya</span>
+                                    <span class="name">Ananya</span>
                                     <span>Graphic Student</span>
                                 </div>
                             </div>                    
@@ -822,7 +822,7 @@
                             <div class="restimonial_single_img ">
                                 <img src="images/team/review_3.jpg" alt="2" class="img-fluid">
                                 <div class="name_position">
-                                    <span class="name">Amit</span>
+                                    <span class="name">Anamika</span>
                                     <span>Software Developer</span>
                                 </div>
                             </div>                    
