Course Details Page Edited
LMS_Volume4

--- a/E-Learners Education/course-details.html
+++ b/E-Learners Education/course-details.html
@@ -107,12 +107,7 @@
             <div class="row">        
                  <div class="col-sm-12 col-md-8 col-lg-8">
                     <div class="intro_text">
-                        <h1>Courses Details</h1>
-                        <div class="pages_links">
-                            <a href="#" title="">Home</a>
-                            <a href="#" title="">Course</a>
-                            <a href="#" title="" class="active">Course Details</a>
-                        </div>
+                        <h1>Trending Course Details</h1>
                     </div>
                 </div>              
 
@@ -271,18 +266,20 @@
                         <div class="tab_contents tab-content">
                             <div role="tabpanel" class="tab-pane fade in active show" id="information">
                                 <h3>Courses Description <span>:</span></h3>
-                                <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+                                <p>Whether you want to create websites without coding, or you need to learn WordPress so you can update existing websites at your job, I've got you covered.
+
+                                    In this brisk but thorough course we build a website together step-by-step and along the way you organically absorb and master WordPress. I'm all about having you follow along with me and I always encourage experimentation over memorization</p>
                                 <h3>What Will I Learn? <span>:</span></h3>
-                                <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>  
+                                    <p>In this brisk but thorough course we build a website together step-by-step and along the way you organically absorb and master WordPress. I'm all about having you follow along with me and I always encourage experimentation over memorization.</p>
                                 <ul class="step_point">
-                                    <li>Create static HTML and CSS portfolio sites and landing pages.</li>
-                                    <li>Think like a developer. Become an expert at Googling code questions!</li>
-                                    <li>Write complex web apps with multiple models and data associations.</li>
-                                    <li>Create a blog application from scratch using Express, MongoDB, and Semantic UI.</li>
-                                    <li>Use Express and MongoDB to create full-stack JS applications.</li>
+                                    <li>Setting up a new WordPress site/project.</li>
+                                    <li>Creating pages.</li>
+                                    <li>Creating blog posts.</li>
+                                    <li>Customizing the colors & theme of your website.</li>
+                                    <li>Embedding YouTube videos into your website.</li>
                                 </ul>                              
                                 <h3>Learning Outcomes <span>:</span></h3>
-                                <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+                                <p>Become highly valuable and relevant to the companies that are hiring WordPress creators; in one convenient place alongside one instructor. If you're ready to begin creating and updating websites - I'll see you on the inside!                                </p>
                                 <ul class="step_point">
                                     <li>Over 37 lectures and 55.5 hours of content!</li>
                                     <li>LIVE PROJECT End to End Software Testing Training Included.</li>
@@ -438,10 +435,10 @@
                                 <div class="courses_teacher">
                                     <div class="tutor_signle">
                                         <div class="tutor_pro">
-                                            <a href="#" title=""><img src="images/team/team_1.jpg" alt="" class="img-fluid"></a>
+                                            <a href="#" title=""><img src="images/team/review_1.jpg" alt="" class="img-fluid"></a>
                                         </div>
                                         <div class="teachers_name">
-                                            <h5><a href="#" title="">Jonson Park</a></h5>
+                                            <h5><a href="#" title="">ABC XYZ</a></h5>
                                             <span>Associate Professor</span>
                                         </div>
                                     </div>
@@ -482,7 +479,7 @@
                                                          <span style="width: 0%"></span>
                                                     </div>
                                                 </div>
-                                                <div class="value">0</div>
+                                                <div class="value">1</div>
                                             </div>
 
                                             <div class="stars">
@@ -516,7 +513,7 @@
                                     </div>
                                 </div>                              
 
-
+<!--
                                 <div class="commnet-wrapper">
                                      <div class="comment-list-items">
                                         <div class="comment-list-wrapper">
@@ -567,6 +564,7 @@
                                         </div>
                                     </div>
                                 </div> 
+                            -->                                  
                             </div>
                         </div>
                     </div> 
