--- a/E-Learners Education/about.html
+++ b/E-Learners Education/about.html
@@ -392,7 +392,7 @@
             <div class="col-12 col-sm-12 col-md-12 col-lg-12">
                 <div class="sub_title">
                     <h2>Everything Is E-learners</h2>
-                    <p>Lorem ipsum dolor sit amet mollis felis dapibus arcu donec viverra. Pede phasellus eget. Etiam maecenas vel vici quis dictum rutrum nec nisi et.</p>  
+                    <p>You can take courses across a wide range of categories, some of which include: business & entrepreneurship, programming, academics, the arts, health & fitness, language, music and much more! </p>
                 </div><!-- ends: .section-header -->
             </div>
         </div>
@@ -443,7 +443,7 @@
             <div class="col-12 col-sm-12 col-md-12 col-lg-12">
                 <div class="sub_title">
                     <h2>Frequently asked Questions</h2>
-                    <p>Lorem ipsum dolor sit amet mollis felis dapibus arcu donec viverra. Pede phasellus eget. Etiam maecenas vel vici quis dictum rutrum nec nisi et.</p>  
+                    <p>E-Learners's mission is to improve lives through learning. Our global marketplace features an extensive, multi-language library, which includes thousands of courses taught by expert instructors.  You can take courses across a wide range of categories, some of which include: business & entrepreneurship, programming, academics, the arts, health & fitness, language, music and much more! </p>
                 </div><!-- ends: .section-header -->
             </div>
         </div>           
@@ -451,29 +451,29 @@
             <div class="col-12 col-sm-12 col-md-12 col-lg-12">
                 <div class="faq_wrapper">
                     <div class="single_faq">
-                        <h3><span>1</span>What is the refund policy?</h3>
-                        <p>Lorem ipsum dolor sit amet mollis felis dapibus arcu donec viverra. Pede phasellus eget maecLorem ipsum dolor sit amet mollis felis dapibus arcu donec viverra. Pede phasellus eget maecenas.</p>  
+                        <h3><span>1</span>What do E-Learners courses include?</h3>
+                        <p>Each E-Learners course is created, owned and managed by the instructor(s). The foundation of each Udemy course are its lectures, which can include videos, slides, and text. In addition, instructors can add resources and various types of practice activities, as a way to enhance the learning experience of students. </p>
                     </div>                    
                     <div class="single_faq">
-                        <h3><span>2</span>What is the refund policy?</h3>
-                        <p>Lorem ipsum dolor sit amet mollis felis dapibus arcu donec viverra. Pedsum dolor sit amet mollis felis dapibus arcu donec viverra. Pede phasellus eget maecenas.</p>   
+                        <h3><span>2</span>How do I take a E-Learners course?</h3>
+                        <p>E-Learners courses are entirely on-demand. You can begin the course whenever you like, and there are no deadlines to complete it.</p>
                     </div>                   
                      <div class="single_faq">
                         <h3><span>3</span>What is the refund policy?</h3>
-                        <p>Lorem ipsum dolor sit amet mollis felis dapibus arcu donec viverra. Pede phaselsit amet mollis felis dapibus arcu donec viverra. Pede phasellus eget maecenas.</p>  
+                        <p>Refund amount will be initiated to your bank account within a working week period.</p>
                     </div>
                     <div class="single_faq">
-                        <h3><span>4</span>What is the refund policy?</h3>
-                        <p>Lorem ipsum dolor sit amet mollis felis dapibus arcu donec viverra. Pede phaseamet mollis felis dapibus arcu donec viverra. Pede phasellus eget maecenas.</p>  
+                        <h3><span>4</span>Where can I go for help?</h3>
+                        <p>If you find you have a question about a paid course while you’re taking it, you can send your queries or questions on contact.support@elearners.com</p>
                     </div>                    
                     <div class="single_faq">
-                        <h3><span>5</span>What is the refund policy?</h3>
-                        <p>Lorem ipsum dolor sit amet mollis felis dapibus arcu donec viverra. Pede phasellus egelis felis dapibus arcu donec viverra. Pede phasellus eget maecenas.</p>   
-                    </div>                   
-                     <div class="single_faq">
-                        <h3><span>6</span>What is the refund policy?</h3>
-                        <p>Lorem ipsum dolor sit amet mollis felis dapibus arcu donec viverra. Pede phasellus eget sit amet mollis felis dapibus arcu donec viverra. Pede phasellus eget maecenas.</p>  
-                    </div>
+                        <h3><span>1</span>What do E-Learners courses include?</h3>
+                        <p>Each E-Learners course is created, owned and managed by the instructor(s). The foundation of each Udemy course are its lectures, which can include videos, slides, and text. In addition, instructors can add resources and various types of practice activities, as a way to enhance the learning experience of students. </p>
+                    </div>                    
+                    <div class="single_faq">
+                        <h3><span>2</span>How do I take a E-Learners course?</h3>
+                        <p>E-Learners courses are entirely on-demand. You can begin the course whenever you like, and there are no deadlines to complete it.</p>
+                    </div> 
                  </div>
             </div>
         </div>
