--- a/E-Learners Education/index.html
+++ b/E-Learners Education/index.html
@@ -92,6 +92,7 @@
                         </li>
                         <li class="nav-item"><a href="event.html" class="nav-link">Live Events</a></li>    
                         <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
+                        <li class="nav-item"><a href="TimeSchedule.html" class="nav-link">Time Schedule</a></li>
                     </ul>
                 </div>
                 <div class="mr-auto search_area ">
