--- a/E-Learners Education/TimeSchedule.html
+++ b/E-Learners Education/TimeSchedule.html
@@ -39,6 +39,20 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+
+    <style>
+        input{
+    margin-bottom: 30px !important;
+    overflow: visible !important;
+    margin-left: 74px !important;
+        }
+
+        td{
+
+            padding-left: 30px !important;
+        }
+    </style>
+
 </head>
 <body>
 <header class="header_inner courses_page">
@@ -60,7 +74,7 @@
                         <div class="login_info">
                              <ul class="d-flex">
                                 <li class="nav-item"><a href="#" class="nav-link sign-in js-modal-show"><i class="flaticon-user-male-black-shape-with-plus-sign"></i>Sign Up</a></li>
-                                <li class="nav-item"><a href="#" class="nav-link join_now js-modal-show"><i class="flaticon-padlock"></i>Lon In</a></li>
+                                <li class="nav-item"><a href="#" class="nav-link join_now js-modal-show"><i class="flaticon-padlock"></i>Log In</a></li>
                             </ul>
                             <!-- <a href="#" title="" class="apply_btn">Apply Now</a> -->
                         </div>
@@ -78,12 +92,12 @@
                     <ul class="navbar-nav nav lavalamp ml-auto menu">
                         <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
                         <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-                        <li class="nav-item"><a href="course.html" class="nav-link active">Courses</a>
+                        <li class="nav-item"><a href="course.html" class="nav-link ">Courses</a>
                             <ul class="navbar-nav nav mx-auto">
-                                <li class="nav-item"><a href="course.html" class="nav-link active">Courses</a></li>
+                                <li class="nav-item"><a href="course.html" class="nav-link ">Courses</a></li>
                                 <li class="nav-item"><a href="course-details.html" class="nav-link">Trending Course This Week</a></li>                            </ul> 
                         </li>
-                            
+                        <li class="nav-item"><a href="TimeSchedule.html" class="nav-link active">Time Schedule</a></li>     
                         <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
                     </ul>
                 </div>
@@ -195,9 +209,41 @@
     </div>
 </section>  <!-- End Login Signup Option -->
 
+<!-- <iframe src="TimeSchedule/index.html" width="100%" height="500px"> -->
+<!-- </iframe> -->
+<form action="insert.php" method="POST">
+    <table> 
+     <tr>
+      <td>Day 1 on which you have time to Learn</td>
+      <td><input type="text" name="day1" required></td>
+     </tr><br><br>
+     <tr>
+      <td>Day 2 on which you have time to Learn</td>
+      <td><input type="text" name="day2" required></td>
+     </tr>
+     <tr>
+      <td>TimeMap :</td>
+      <td>
+       <input type="radio" name="timemap" value="am" required>AM
+       <input type="radio" name="timemap" value="pm" required>PM
+      </td>
+     </tr>
+     <tr>
+      <td>Total Hour Durtion :</td>
+      <td><input type="totalhour" name="totalhour" required></td>
+     </tr> 
+     <tr>
+        <td>Starting Hour Time :</td>
+        <td><input type="Hour" name="Hour" required></td>
+       </tr> 
+     <tr>
+      <td><input type="submit" value="Submit"></td>
+     </tr>
+    </table>
+   </form>
 
-
-<br><br><br><br><br>
+   
+<br><br>
 <!-- Footer -->  
 <footer class="footer_2">
     <div class="container">
