--- a/E-Learners Education/about.html
+++ b/E-Learners Education/about.html
@@ -77,7 +77,7 @@
                                 <li class="nav-item"><a href="course.html" class="nav-link">Courses</a></li>
                                 <li class="nav-item"><a href="course-details.html" class="nav-link">Trending Course This Week</a></li>                            </ul> 
                         </li>
-     
+                        <li class="nav-item"><a href="TimeSchedule.html" class="nav-link">Time Schedule</a></li>
                         <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
                     </ul>
                 </div>
