--- a/E-Learners Education/contact.html
+++ b/E-Learners Education/contact.html
@@ -78,7 +78,7 @@
                                 <li class="nav-item"><a href="course.html" class="nav-link">Courses</a></li>
                                 <li class="nav-item"><a href="course-details.html" class="nav-link">Trending Course This Week</a></li>                            </ul> 
                         </li>
-   
+                        <li class="nav-item"><a href="TimeSchedule.html" class="nav-link">Time Schedule</a></li>
                         <li class="nav-item"><a href="contact.html" class="nav-link active">Contact</a></li>
                     </ul>
                 </div>
@@ -247,21 +247,22 @@
                     <h3 class="title">Get In Touch</h3>
                     <div class="leave_comment">
                         <div class="contact_form">
-                            <form action="#">
+                            <form action="connect.php" method="POST">
                                 <div class="row">
                                     <div class="col-12 col-sm-12 col-md-6 form-group">
-                                       <input type="text" class="form-control" id="name"  placeholder="Your Name">
+                                       <input type="text" class="form-control" id="name" name="name" placeholder="Your Name">
                                     </div>
                                     <div class="col-12 col-sm-12 col-md-6 form-group">
-                                        <input type="email" class="form-control" id="email" placeholder="Your E-mail">
+                                        <input type="email" class="form-control" id="email" name="email" placeholder="Your E-mail">
                                     </div>                                    
                                     <div class="col-12 col-sm-12 col-md-12 form-group">
-                                        <input type="text" class="form-control" id="subject" placeholder="Your Subject">
+                                        <input type="text" class="form-control" id="subject" name="subject" placeholder="Your Subject">
                                     </div>
                                     <div class="col-12 col-sm-12 col-md-12 form-group">
-                                        <textarea class="form-control" id="comment" placeholder="Wite Here Your Comment ..."></textarea>
+                                        <textarea class="form-control" id="comment" name="comment" placeholder="Wite Here Your Comment ..."></textarea>
                                     </div>
                                      <div class="col-12 col-sm-12 col-md-12 submit-btn">
+                                         <!-- <input type="submit" class="text-center"> -->
                                         <button type="submit" class="text-center">Send Massage</button>
                                     </div>
                                 </div>
